--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-us">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap_Index</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css"> 
@@ -52,11 +53,12 @@
 
              <div class = "col-md-3">  
                               <div class="alert alert-info" role="alert">
-                                Portfolio
+                                  <a href="portfolio.html">Portfolio</a>
                               </div>
                              
                               <div class="alert alert-dark" role="alert">
-                                Contact
+                                  <a href="contact.html">Contact</a>
+                                <!-- Contact -->
                               </div>  
             </div>
   
