--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,7 @@
 <html lang="en-us">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap_Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css"> 
