--- a/professinfo.html
+++ b/professinfo.html
@@ -15,7 +15,7 @@
     <div>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <a class="navbar-brand" href="#">Stacie M Knisley Designs</a>
+          <a class="navbar-brand" href="#">Stacie Knisley Designs</a>
         </div>
       </nav>
     </div>
@@ -29,17 +29,17 @@
             <div class = "col-md-12">   
                  
                               <div class="alert alert-info" role="alert">
-                                <a href="https://github.com/stacieknisley/stacieknisley.github.io">stacieknisley.github.io</a>
-
+                                    stacieknisley.github.io
                               </div>
                              
                               <div class="alert alert-dark" role="alert">
                                     stacieknisley@juno.com
                               </div> 
 
-                              <div class="alert alert-info" role="alert">
-                                <a href="index.html">Return to Home</a>
-                            </div>
+                              <div class="alert alert-dark" role="alert">
+                                <a href="indexwireframe.html">Professional Information</a>
+                                </div>
+
 
 <!--                               
                               <div class="dropdown">
